--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width", initial-scale=1.0, viewport-fit=cover">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Responsive Website Design Tutorial</title>
+    <link rel="shortcut icon" href="#">
+
+    <!--Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!--Style CSS-->
+    <link rel="stylesheet" href="css/styles.css">
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400$display=swap" rel="stylesheet">
+
+</head>
+
+<body>
+
+
+<!--Landing Page-->
+<div class="landing">
+    <h4>Modern Design Concepts</h4>
+    <h1>Welcome to my Website</h1>
+
+    <div class="row home justify-content-center text-center px-md-5 px-lg-0">
+
+        <div class="col-3 col-sm-2 col-lg-1 p-0">
+            <span class="fa-stack fa-2x">
+                <i class="fa fa-free-code-camp"></i>
+            </span>
+        </div>
+
+        <div class="col-3 col-sm-2 col-lg-1 p-0">
+            <span class="fa-stack fa-2x">
+                <i class="fa fa-free-code-camp"></i>
+            </span>
+        </div> 
+
+        <div class="col-3 col-sm-2 col-lg-1 p-0">
+            <span class="fa-stack fa-2x">
+                <i class="fa fa-free-code-camp"></i>
+            </span>
+        </div> 
+
+        <div class="col-3 col-sm-2 col-lg-1 p-0">
+            <span class="fa-stack fa-2x">
+                <i class="fa fa-free-code-camp"></i>
+            </span>
+        </div> 
+
+    </div>
+</div>
+
+
+<!--jQuery-->
+<script src="js/jquery-3.4.1.min.js"></script>
+<!--Bootstrap JS-->
+<script src="js/bootstrap.min.js"></script>
+<!--Popper JS-->
+<script src="js/popper.min.js"></script>
+<!--Font Awesome-->
+<script src="js/all.min.js"></script>
+<script src="https://use.fontawesome.com/f954274673.js"></script>
+
+
+
+</body>
+</html>
