--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!--Style CSS-->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400$display=swap" rel="stylesheet">
 
